# kenny_learn_qml2026

./: .gitignore  README.md  kenny的测试用媒体页面.md  彻底解决Qt6中使用QtGraphicalEffects的问题.docx
chapter1_spinwheel/: CMakeLists.txt  Main.qml  SpinWheel.qml  main.cpp
chapter2/qml6start_anchordemo/: AnchorsDemo.qml  CMakeLists.txt  Main.qml  main.cpp
chapter2/qml6start_inputdemo1/: CMakeLists.txt  KeyNavTextInput.qml  Main.qml  MyInput.qml  TestMyInput.qml  main.cpp
chapter2/qml6start_keys/: CMakeLists.txt  KeysDemo.qml  main.cpp
chapter2/qml6x_component_demo/: CMakeLists.txt  Main.qml  MyCom.qml  main.cpp
chapter2/simple_transform/: CMakeLists.txt  ImageButton.qml  Main.qml  MyButton.qml  SimpleTransformDemo.qml  main.cpp  res.qrc
chapter3/qml6fluid_animation/: CMakeLists.txt  EasingCurvesDemo.qml  ImageAnim.qml  ImageBtn2.qml  Main.qml  TestImageBtn.qml  main.cpp  res.qrc
chapter3/qml6fluid_animgroup/: BouncingBallAnim.qml  CMakeLists.txt  ImageBtn.qml  Main.qml  ParallelAnimationDemo.qml  SequentialAnimationDemo.qml  main.cpp  res.qrc
chapter3/state_transition/: CMakeLists.txt  Main.qml  StateDemoCom.qml  main.cpp
chapter4/PathViewDemo/: CMakeLists.txt  Main.qml  PathViewDemo.qml  main.cpp
chapter4/modelviewdelegate/: CMakeLists.txt  CustomHighlightDemo.qml  DelegateDemo.qml  Demo1.qml  Demo2.qml  Demo3.qml  HighlightListViewDemo.qml  ListViewDemo.qml  ListViewHorizontalDemo.qml  Main.qml  SunSystemDemo.qml  main.cpp
chapter4/mv_delegate/: AnimateAddRemoveDemo.qml  CMakeLists.txt  Main.qml  main.cpp
chapter4/sectionedListView/: CMakeLists.txt  Main.qml  SectionedListView.qml  main.cpp
chapter4/shapeShiftingDelegate/: CMakeLists.txt  Main.qml  main.cpp
chapter4/xmlListMode/: CMakeLists.txt  Main.qml  XmlListModelDemo.qml  main.cpp
chapter5/canvas_basic/: CMakeLists.txt  CanvasDemo.qml  CanvasGlowLineDemo.qml  CanvasPaintDemo.qml  CompositionCanvasDemo.qml  ConvenienceDemo.qml  GradientCanvasDemo.qml  ImageCanvasDemo.qml  LineDemo.qml  Main.qml  TransformCanvasDemo.qml  res.qrc
chapter5_cavas/: CMakeLists.txt  CanvasSpiroGraphDemo.qml  CompositionOperationCanvasDemo.qml  ImageDataCanvasDemo.qml  ShadowCanvasDemo.qml  TransformCanvasDemo.qml  main.cpp
chapter6-particle/particleSystem/: AgeDemo.qml  AngleDirectionParticle.qml  AngleDirectionParticle2.qml  AttractorDemo.qml  CMakeLists.txt  Firework.qml  FrictionDemo.qml  GravityDemo1.qml  GravityDemo2.qml  ItemParticle.qml  ItemParticle2.qml  ItemParticle3.qml  Main.qml  ParticleGroupDemo1.qml  PointDirectionParticle.qml  RotationvariationParticle.qml  SimpleParticle.qml  TargetDirectionParticle.qml  TurbulenceDemo.qml  WanderDemo.qml  main.cpp  res.qrc
chapter7_shader/CurtainShaderEffect/: CMakeLists.txt  CurtainEffect.qml  Curtaindemo.qml  Main.qml  main.cpp  res.qrc
chapter7_shader/CurtainShaderEffect/qsb/: curtain.frag.qsb  curtain.vert.qsb
chapter7_shader/GenieEffect/: CMakeLists.txt  GenieEffect1.qml  GenieEffect2.qml  GenieEffect3.qml  GenieEffect4.qml  Main.qml  main.cpp  res.qrc
chapter7_shader/GenieEffect/qsb/: genie1.vert  genie1.vert.qsb  genie2.vert  genie2.vert.qsb  genie3.vert  genie3.vert.qsb  genie4.vert  genie4.vert.qsb
chapter7_shader/RedlenShader/: CMakeLists.txt  Main.qml  main.cpp  res.qrc
chapter7_shader/RedlenShader/redlens/: RedLensDemo.qml  red1.frag  red1.frag.qsb  red2.frag  red2.frag.qsb  red3.frag  red3.frag.qsb
chapter7_shader/WaveEffect/: CMakeLists.txt  Main.qml  WaveShaderEffect.qml  main.cpp  res.qrc  wave.frag  wave.frag.qsb
chapter7_shader/defaultSHaderDemo/: CMakeLists.txt  Genie.qml  Main.qml  main.cpp  res.qrc
chapter7_shader/defaultSHaderDemo/default/: DefaultShaderDemo.qml  default.vert  default.vert.qsb  default1.frag.qsb
chapter7_shader/useQt5GraphicEffectsDemos/: BrightnessContrast.qml  CMakeLists.txt  ColorOverlay.qml  Colorize.qml  ConicalGradient.qml  Desaturate.qml  Displace.qml  DisplaceDemo.qml  FastBlurDemo.qml  Main.qml  main.cpp  res.qrc
chapter7_shader/useQt5GraphicLib/: BlendEffectDemo.qml  BrightnessContrastDemo.qml  CMakeLists.txt  ColorOverlayDemo.qml  ColorizeDemo.qml  ConicalGradientDemo.qml  DesaturateDemo.qml  DropShadowDemo.qml  FastBlurDemo.qml  FastBlurDemo2.qml  GammaAdjustDemo.qml  GaussianBlurDemo.qml  GlowDemo.qml  HueSaturationDemo.qml  InnerShadowDemo.qml  LevelAdjustDemo.qml  LinearGradientDemo.qml  Main.qml  MaskedBlurDemo.qml  OpacityMaskDemo.qml  RadialBlurDemo.qml  RadialGradientDemo.qml  RectangularGlowDemo.qml  RecursiveBlurDemo.qml  TestDemo.qml  ThresholdMaskDemo.qml  ZoomBlurDemo.qml  main.cpp  res.qrc
chapter8-multimedia/QmlImageCaptrue/: CMakeLists.txt  ImageCaptureDemo.qml  Main.qml  SimpleImageCap.qml  main.cpp
chapter8-multimedia/basic_playback/: CMakeLists.txt  Main.qml  SimplePlayer.qml  main.cpp  res.qrc
chapter8-multimedia/cameraDemo/: Button.qml  CMakeLists.txt  CameraDemo.qml  Main.qml  SimpleCam.qml  main.cpp
chapter8-multimedia/savevideodemo/: CMakeLists.txt  CapAndSaveDemo.qml  Main.qml  main.cpp
chapter8-multimedia/screencap/: CMakeLists.txt  Main.qml  ScreenCapDemo.qml  main.cpp
chapter8-multimedia/soudeffectdemo/: BasicSoundEffectDemo.qml  CMakeLists.txt  Main.qml  SoundEffectWithControls.qml  main.cpp  res.qrc
chapter9_FileDialog+FoolderDialog/: CMakeLists.txt  CapToListView.qml  FileDialogDemo.qml  FolderDialogDemo.qml  Main.qml  main.cpp
test/: CMakeLists.txt  Main.qml  main.cpp
